@@ -1,1 +1,1 @@
-default
+short
