@@ -1,7 +1,8 @@
+short;Short;Short;EURONEXT;EUR;1.196000
 default;<default portfolio>;18331;EURONEXT;EUR;1.196000
 e-trade;E-Trade Compte Titre US;xxx;NASDAQ;EUR;1.196000
 yahoo;Yahoo;789;NASDAQ;USD;1.196000
 michel-1475086;SF bug 1475086;1475086;EURONEXT;EUR;1.196000
-michel-1447310;SF Bug 1447310;0000;EURONEXT;EUR;1.196000
 bug_1458827;bug_1458827;bug_1458827;EURONEXT;EUR;1.196000
+michel-1447310;SF Bug 1447310;0000;EURONEXT;EUR;1.196000
 abcbourse;AbcBourse;456;EURONEXT;EUR;1.196000
