@@ -1,0 +1,2 @@
+FR0000073272;SAFRAN;SAF;EURONEXT;EUR;PAR
+NL0000400653;GEMALTO;GTO;EURONEXT;EUR;PAR
